--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -15,8 +15,11 @@ $react-color: #61DAFB;
 $vuejs-color: #4FC08D;
 $css-color: #1572B6;
 $scss-color: #CC6699;
-$symfony-color: #ffffff;
+$symfony-color: #919191;
 $threejs-color: #000000;
+$laravel-color: #FF2D20;
+$unity-color: #ffffff;
+$git-color: #F05032;
 $wordpress-color: #21759B;
 $mysql-color: #4479A1;
 $php-color: #777BB4;
