--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -638,20 +638,48 @@ footer .logo {
   position: absolute;
   top: 50%;
   left: 70%;
-  box-shadow: #43D9AD -100px -100px 10000px 100px;
   border-radius: 50%;
   z-index: 3;
+  animation: lightAnimateGreen 7s linear infinite;
 }
 
 .light-blue {
   position: absolute;
   top: 50%;
   left: 70%;
-  box-shadow: #4D5BCE 100px 100px 10000px 100px;
   border-radius: 50%;
   z-index: 3;
+  animation: lightAnimateBlue 7s linear infinite;
 }
 
+@keyframes lightAnimateGreen {
+  0% {
+    box-shadow: #43D9AD 0 0 10000px 100px;
+  }
+  25% {
+    box-shadow: #43D9AD 100px 100px 10000px 100px;
+  }
+  50% {
+    box-shadow: #43D9AD -100px 100px 10000px 100px;
+  }
+  100% {
+    box-shadow: #43D9AD 0 0 10000px 100px;
+  }
+}
+@keyframes lightAnimateBlue {
+  0% {
+    box-shadow: #4D5BCE 0 0 10000px 100px;
+  }
+  25% {
+    box-shadow: #4D5BCE -100px -100px 10000px 100px;
+  }
+  50% {
+    box-shadow: #4D5BCE 100px -100px 10000px 100px;
+  }
+  100% {
+    box-shadow: #4D5BCE 0 0 10000px 100px;
+  }
+}
 .nom-page1 {
   grid-column: 1/2;
   grid-row: 1/2;
@@ -925,7 +953,7 @@ footer .logo {
   width: 40px;
   height: auto;
   padding: 5px;
-  background-color: #ffffff;
+  background-color: #919191;
 }
 .project .card .logo-card-Threejs {
   position: absolute;
@@ -935,6 +963,15 @@ footer .logo {
   height: auto;
   padding: 5px;
   background-color: #000000;
+}
+.project .card .logo-card-Unity {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 40px;
+  height: auto;
+  padding: 5px;
+  background-color: #ffffff;
 }
 .project .card .description-card {
   display: flex;
