ajout du hover au footer

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -534,19 +534,43 @@ footer .footer-left .find {
   width: 200px;
   height: auto;
 }
+footer .footer-left .logo-bg-linkedin {
+  width: 30px;
+  height: 30px;
+  margin: 0 20px;
+  background-image: url(/public/assets/linkedin.svg);
+  background-size: cover;
+  transition: opacity 0.3s ease-in-out, background-image 0.3s ease-in-out;
+}
+footer .footer-left .logo-bg-linkedin:hover {
+  width: 30px;
+  height: 30px;
+  margin: 0 20px;
+  background-image: url(/public/assets/linkedin-hover.svg);
+  background-size: cover;
+}
 footer .footer-right {
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  width: 280px;
+  width: 230px;
   height: 100%;
-  padding-right: 10px;
+  padding-right: 20px;
   border-left: solid #1E2D3D 1px;
 }
-footer .logo {
-  margin: 0 20px;
+footer .footer-right .logo-bg-github {
   width: 30px;
-  height: auto;
+  height: 30px;
+  background-image: url(/public/assets/github.svg);
+  background-size: cover;
+  transition: opacity 0.3s ease-in-out, background-image 0.3s ease-in-out;
+  margin-left: 10px;
+}
+footer .footer-right .logo-bg-github:hover {
+  width: 30px;
+  height: 30px;
+  background-image: url(/public/assets/github-hover.svg);
+  background-size: cover;
 }
 
 .main {
